--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -1,38 +1,42 @@
 {% extends 'base.html' %}
-
+{% load i18n %}
 {% block page_title %}
-    Home
+Home
 {% endblock page_title %}
 
 {% block content %}
 
-    <div class="container mx-auto pb-10">
+<div class="container mx-auto pb-10">
 
-        <div class="rounded-xl bg-gray-800 -mx-40 h-50vh mt-32 mb-24 bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1564013799919-ab600027ffc6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80)"></div>
-
-        <div class="flex flex-wrap -mx-40 mb-10">
-            {% for room in rooms %}
-                {% include 'mixins/room_card.html' with room=room %}
-            {% endfor %}
-        </div>
-        <div class="flex items-center justify-center mx-auto container"> 
-            {% comment %} 
-                paginator에는 이전 페이지나 다음 페이지를 판별하는 메소드가 있다.
-                그게 page.has_previous, page.has_next이다.
-            {% endcomment %}
-            {% if page_obj.has_previous %}
-                <a href="?page={{page_obj.previous_page_number}}" class="text-teal-500">
-                    <i class="fas fa-arrow-left fa-lg"></i>
-                </a>
-            {% endif %}
-        
-            <span class="mx-3 font-medium text-lg">Page {{page_obj.number}} of {{page_obj.paginator.num_pages}} </span>
-            
-            {% if page_obj.has_next %}
-                <a href="?page={{page_obj.next_page_number}}" class="text-teal-500">
-                    <i class="fas fa-arrow-right fa-lg"></i>
-                </a>
-            {% endif %}
-        </div>
+    <div class="rounded-xl bg-gray-800 -mx-40 h-50vh mt-32 mb-24 bg-cover bg-center"
+        style="background-image:url(https://images.unsplash.com/photo-1564013799919-ab600027ffc6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80)">
     </div>
+
+    <div class="flex flex-wrap -mx-40 mb-10">
+        {% for room in rooms %}
+        {% include 'mixins/room_card.html' with room=room %}
+        {% endfor %}
+    </div>
+    <div class="flex items-center justify-center mx-auto container">
+        {% comment %}
+        paginator에는 이전 페이지나 다음 페이지를 판별하는 메소드가 있다.
+        그게 page.has_previous, page.has_next이다.
+        {% endcomment %}
+        {% if page_obj.has_previous %}
+        <a href="?page={{page_obj.previous_page_number}}" class="text-teal-500">
+            <i class="fas fa-arrow-left fa-lg"></i>
+        </a>
+        {% endif %}
+
+        <span class="mx-3 font-medium text-lg">
+            {% blocktrans with current_page=page_obj.number total_pages=page_obj.paginator.num_pages %}Page {{current_page}} of {{total_pages}} {% endblocktrans %}
+        </span>
+
+        {% if page_obj.has_next %}
+        <a href="?page={{page_obj.next_page_number}}" class="text-teal-500">
+            <i class="fas fa-arrow-right fa-lg"></i>
+        </a>
+        {% endif %}
+    </div>
+</div>
 {% endblock content %}
