--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -14,6 +14,7 @@
         {% if request.session.is_hosting %}
             <li class="nav_link"><a href="{% url 'rooms:create' %}">{% trans 'Create Room' %}</a></li>     
         {% endif %}
+        <li class="nav_link"><a href="{% url "lists:see-favs" %}">{% trans 'Favs' %} ({{user.list.rooms.count}})</a></li>
         <li class="nav_link"><a href="{{user.get_absolute_url}}">{% trans 'Profile' %}</a></li>
         <li class="nav_link"><a href="{% url "users:logout" %}">{% trans 'Log Out' %}</a></li>
     {% else %}
