--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -30,9 +30,9 @@
             </div>
             {% on_favs room as on_favs_boolean %}
             {% if on_favs_boolean %}
-                <a class="block mb-10 w-2/6" href="{% url 'lists:save-room' room.pk %}">{% trans 'Remove from Favorites' %}</a>
+                <a class="block mb-10 w-2/6" href="{% url 'lists:toggle-room' room.pk %}?action=remove">{% trans 'Remove from Favorites' %}</a>
             {% else %}
-                <a class="block mb-10 w-2/6" href="{% url 'lists:save-room' room.pk %}">{% trans 'Save to Favorites' %}</a>
+                <a class="block mb-10 w-2/6" href="{% url 'lists:toggle-room' room.pk %}?action=add">{% trans 'Save to Favorites' %}</a>
             {% endif %}
             <div class="flex border-section">
                 <span class="mr-5 font-light">{{room.room_type}}</span>
